--- a/src/Visual/Visual.css
+++ b/src/Visual/Visual.css
@@ -1,5 +1,6 @@
 .VisualHeader {
-  background-color: dimgray;
+  border-radius: 10px;
+  background-color: lightslategray;
 }
 .VisualHeader .buttons {
   align-content: center;
@@ -12,4 +13,41 @@
   text-align: center;
   width: 80px;
   height: 60px;
+}
+
+.MainLayout {
+  padding-top: 15px;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.MainLayout .side {
+  min-width: 200px;
+  min-height: 200px;
+  align-content: center;
+  justify-content: space-around;
+}
+
+.MainLayout .main {
+  flex: auto;
+}
+
+.TableNameTag button {
+  background-color: lightslategray;
+  border-radius: 0%;
+  min-width: 200px;
+}
+
+.SideView {
+  background-color: lightslategray;
+  border-radius: 20px;
+  min-width: 200px;
+  min-height: 200px;
+  position: sticky;
+}
+
+.MainView {
+  padding-top: 15px;
+  border-radius: 10px;
+  background-color: dimgray;
 }
